--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "soci-start",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --turbo",
     "build": "next build",
@@ -10,10 +11,13 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.7.1",
+    "@prisma/client": "^5.20.0",
     "babel-plugin-react-compiler": "^0.0.0-experimental-938cd9a-20240601",
     "next": "15.0.0-rc.0",
+    "prisma": "^5.20.0",
     "react": "19.0.0-rc-f994737d14-20240522",
-    "react-dom": "19.0.0-rc-f994737d14-20240522"
+    "react-dom": "19.0.0-rc-f994737d14-20240522",
+    "svix": "^1.37.0"
   },
   "devDependencies": {
     "@types/node": "^20",
